Fix for issue #2 and more!
Okay, so issue #2 took a little more refactoring than expected.  On the other hand, I'm less embarrassed about the code - though still not proud.

files/pbboard.css:

  - Fixed the width of the columns so it doesn't change if there are issues in it or not.  As a result, issues are dynamically sized on the board.  This will look weird with lengthy summaries or many columns.

  - Centered issues in the column.  That one was just straight up bugging me.

pages/PB.class.php

  - private static bit me, just like Charlie.

  - Okay, so I didn't remove the comment, but php does not have "instance variables".  It has "properties".  Sue me.

  - The constructor now takes two arguments to instantiate one board.

    * As a consequence, I have removed support for boards across multiple projects for the time being.  They don't quite make sense to me yet.

    * Entirely remove the method _set_project_ids()

  - Moved all of the Project Board HTML from pages/board.php into pages/board-inc.php.  It's not pretty, but it works.

  - Removed all the accessors.  Left the section comment for accessors.

  - Changed all self:: references to $this->

  - All previously private static functions are now just private.

  - _set_columns() no longer guesses.  It knows.

pages/board-inc.php:

  - New file, included by a PB object, to render a board.

pages/board.php:

  - Has this file changed, or what?  The board HTML has been moved to pages/board-inc.php.  Most of the sloppy, trashy code written to string something together has been cleaned up.  All that's left is a clean little file.

--- a/files/pbboard.css
+++ b/files/pbboard.css
@@ -17,6 +17,10 @@ div.pbbar span.bar {
 	background: #d2f5b0;
 }
 
+table.pbboard {
+  table-layout: fixed;
+}
+
 td.pbcolumn {
 	padding: 4px;
 	vertical-align: top;
@@ -33,8 +37,10 @@ td.pbcolumn hr {
 div.pbblock {
         overflow: auto;
         width: 100%;
-	width: 230px;
+	width: 90%;
 	margin: 4px;
+        margin-left:auto;
+        margin-right:auto;
 
 	background: #FAF3AA;
 	border: 1px solid black;
